--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,8 +3,13 @@ name: Android CI
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main ]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -16,18 +21,37 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
+
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
 
     - name: Build with Gradle
-      run: cd obv_messenger && ./gradlew assembleDebug --stacktrace
+      run: cd obv_messenger && ./gradlew :app:assembleProdNogoogleDebug --stacktrace
 
-    - name: Upload APK
+    - name: Upload APKs
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: apk
-        path: obv_messenger/app/build/outputs/apk/debug/
+        name: apks
+        path: obv_messenger/app/build/outputs/apk/**/*.apk
+
+  release:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download APKs
+        uses: actions/download-artifact@v4
+        with:
+          name: apks
+          path: apks
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: apks/**/*.apk
