--- a/obv_messenger/app/build.gradle
+++ b/obv_messenger/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "io.olvid.messenger"
         minSdkVersion 23
         targetSdk 36
-        versionCode 300
-        versionName "4.2.11"
+        versionCode 301
+        versionName "4.2.12"
         vectorDrawables.useSupportLibrary true
         multiDexEnabled true
         resourceConfigurations += ['en', 'fr', 'af', 'ar', 'ca', 'cs', 'da', 'de', 'el', 'es', 'fa', 'fi', 'hi', 'hr', 'hu', 'it', 'iw', 'ja', 'ko', 'nl', 'no', 'pl', 'pt', 'pt-rBR', 'ro', 'ru', 'sk', 'sl', 'sv', 'tr', 'uk', 'vi', 'zh', 'zh-rTW']
@@ -238,8 +238,8 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Liquid Glass (JitPack)
-    implementation 'com.github.Kyant0.AndroidLiquidGlass:backdrop:1.1.2'
-    implementation 'com.github.Kyant0.AndroidLiquidGlass:capsule:2.1.2'
+    implementation 'io.github.kyant0:backdrop:1.0.4'
+    implementation 'io.github.kyant0:capsule:2.1.2'
 
     // webclient
     implementation 'com.google.protobuf:protobuf-lite:3.0.1'
