--- a/obv_messenger/app/build.gradle
+++ b/obv_messenger/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'kotlin-android'
     id 'org.jetbrains.kotlin.plugin.compose' version "$kotlin_version"
-    id 'com.google.devtools.ksp' version "2.1.10-1.0.31"
+    id 'com.google.devtools.ksp' version "2.3.0"
 }
 
 import org.gradle.internal.os.OperatingSystem
@@ -26,8 +26,8 @@ android {
         applicationId "io.olvid.messenger"
         minSdkVersion 23
         targetSdk 36
-        versionCode 302
-        versionName "4.2.13"
+        versionCode 303
+        versionName "4.2.14"
         vectorDrawables.useSupportLibrary true
         multiDexEnabled true
         resourceConfigurations += ['en', 'fr', 'af', 'ar', 'ca', 'cs', 'da', 'de', 'el', 'es', 'fa', 'fi', 'hi', 'hr', 'hu', 'it', 'iw', 'ja', 'ko', 'nl', 'no', 'pl', 'pt', 'pt-rBR', 'ro', 'ru', 'sk', 'sl', 'sv', 'tr', 'uk', 'vi', 'zh', 'zh-rTW']
